compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__const_multiple_errors_invalid_value.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1456
expression: "const invalid_value: String = MyInvalidValue\nconst invalid_unannotated_value = [1, 2.0]"
snapshot_kind: text
---
----- SOURCE CODE
const invalid_value: String = MyInvalidValue
const invalid_unannotated_value = [1, 2.0]

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:1:31
  │
1 │ const invalid_value: String = MyInvalidValue
  │                               ^^^^^^^^^^^^^^

The custom type variant constructor `MyInvalidValue` is not in scope here.

error: Type mismatch
  ┌─ /src/one/two.gleam:2:39
  │
2 │ const invalid_unannotated_value = [1, 2.0]
  │                                       ^^^

Expected type:

    Int

Found type:

    Float
